Fix show facets button on tablet & mobile

--- a/app/assets/stylesheets/nla/_buttons.scss
+++ b/app/assets/stylesheets/nla/_buttons.scss
@@ -62,11 +62,12 @@
 .btn-outline-primary,
 .btn-outline-secondary {
   background: var(--nla-white);
+  --bs-btn-color: var(--nla-black);
   
   &:focus,
   &:hover,
   &:active {
-    background-color: var(--nla-lightest-teal);
+    background-color: var(--nla-light-teal);
     color: var(--nla-black);
     text-decoration: none;
   }
